--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1B.yml
@@ -444,7 +444,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet9
   peer_type: l3_interface
@@ -452,7 +453,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet10
   peer_type: l3_interface
@@ -460,7 +462,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test-DC1-BL1B
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet11
   peer_type: l3_interface
@@ -468,7 +471,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: DC1-BL1B descriptions preferred over single description
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet12
   peer_type: l3_interface
@@ -478,7 +482,8 @@ ethernet_interfaces:
   description: test l3 interfaces acls
   access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet12
   access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet12
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet13.10
   peer_type: l3_interface
@@ -497,10 +502,12 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_WAN_Zone
 - name: Ethernet13
-  type: routed
+  switchport:
+    enabled: false
   peer_type: l3_interface
   shutdown: false
 - name: Ethernet4000
