--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF1A.yml
@@ -333,11 +333,13 @@ ethernet_interfaces:
   port_profile: ALL_WITH_SECURITY
   description: server02_SINGLE_NODE_TRUNK_Eth1
   shutdown: false
-  type: switched
   l2_mtu: 8000
   l2_mru: 9000
-  mode: trunk
-  vlans: 1-4094
+  switchport:
+    enabled: true
+    mode: trunk
+    trunk:
+      allowed_vlan: 1-4094
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: 'False'
   spanning_tree_bpduguard: 'False'
@@ -348,33 +350,38 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server02_SINGLE_NODE_Eth1
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '110'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '110'
 - name: Ethernet8
   peer: PHONE01_untagged
   peer_interface: Eth0
   peer_type: phone
   description: PHONE01_untagged_Eth0
   shutdown: false
-  type: switched
-  mode: trunk phone
-  native_vlan: 120
-  phone:
-    vlan: 113
-    trunk: untagged
+  switchport:
+    enabled: true
+    mode: trunk phone
+    trunk:
+      native_vlan: 120
+    phone:
+      vlan: 113
+      trunk: untagged
 - name: Ethernet9
   peer: PHONE02_tagged
   peer_interface: Eth0
   peer_type: phone
   description: PHONE02_tagged_Eth0
   shutdown: false
-  type: switched
-  mode: trunk phone
-  native_vlan: 120
-  phone:
-    vlan: 113
-    trunk: tagged
+  switchport:
+    enabled: true
+    mode: trunk phone
+    trunk:
+      native_vlan: 120
+    phone:
+      vlan: 113
+      trunk: tagged
 loopback_interfaces:
 - name: Loopback0
   description: ROUTER_ID
