--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/MH-L2LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/MH-L2LEAF1A.yml
@@ -103,7 +103,8 @@ ethernet_interfaces:
   peer_type: server
   description: server02_Eth1
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
   link_tracking_groups:
   - name: l2leaf-server02
     direction: downstream
