--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-spine1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-spine1.yml
@@ -162,7 +162,8 @@ ethernet_interfaces:
   peer_interface: Ethernet9
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet9
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -172,7 +173,8 @@ ethernet_interfaces:
   peer_interface: Ethernet10
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet10
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -182,7 +184,8 @@ ethernet_interfaces:
   peer_interface: Ethernet11
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet11
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
 - name: Ethernet12
@@ -190,7 +193,8 @@ ethernet_interfaces:
   peer_interface: Ethernet12
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet12
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -200,7 +204,8 @@ ethernet_interfaces:
   peer_interface: Ethernet13
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet13
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -210,7 +215,8 @@ ethernet_interfaces:
   peer_interface: Ethernet14
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet14
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -220,7 +226,8 @@ ethernet_interfaces:
   peer_interface: Ethernet15
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet15
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
 - name: Ethernet16
@@ -228,7 +235,8 @@ ethernet_interfaces:
   peer_interface: Ethernet16
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine2_Ethernet16
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
