--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-spine2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-spine2.yml
@@ -162,7 +162,8 @@ ethernet_interfaces:
   peer_interface: Ethernet9
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet9
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -172,7 +173,8 @@ ethernet_interfaces:
   peer_interface: Ethernet10
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet10
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -182,7 +184,8 @@ ethernet_interfaces:
   peer_interface: Ethernet11
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet11
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
 - name: Ethernet12
@@ -190,7 +193,8 @@ ethernet_interfaces:
   peer_interface: Ethernet12
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet12
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
 - name: Ethernet13
@@ -198,7 +202,8 @@ ethernet_interfaces:
   peer_interface: Ethernet13
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet13
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -208,7 +213,8 @@ ethernet_interfaces:
   peer_interface: Ethernet14
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet14
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   flow_tracker:
@@ -218,7 +224,8 @@ ethernet_interfaces:
   peer_interface: Ethernet15
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet15
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
 - name: Ethernet16
@@ -226,7 +233,8 @@ ethernet_interfaces:
   peer_interface: Ethernet16
   peer_type: spine
   description: P2P_LINK_TO_flow-tracking-tests-spine1_Ethernet16
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
 loopback_interfaces:
