--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_isis.yml
@@ -44,7 +44,8 @@ ethernet_interfaces:
   peer_interface: ethernet1
   peer_type: other
   description: P2P_LINK_TO_peer1_ethernet1
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 2000
   service_profile: TEST-QOS-PROFILE
@@ -59,7 +60,8 @@ ethernet_interfaces:
   peer_interface: ethernet2
   peer_type: other
   description: P2P_LINK_TO_peer2_ethernet2
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.2/31
@@ -76,7 +78,8 @@ ethernet_interfaces:
   peer_interface: ethernet3
   peer_type: other
   description: P2P_LINK_TO_peer3_ethernet3
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.4/31
@@ -91,7 +94,8 @@ ethernet_interfaces:
   peer_interface: ethernet4
   peer_type: other
   description: P2P_LINK_TO_peer4_ethernet4
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.6/31
