--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_multicast.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_multicast.yml
@@ -47,7 +47,8 @@ ethernet_interfaces:
   peer_interface: ethernet1
   peer_type: other
   description: P2P_LINK_TO_peer1_ethernet1
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.4/31
@@ -58,7 +59,8 @@ ethernet_interfaces:
   peer_interface: ethernet2
   peer_type: other
   description: P2P_LINK_TO_peer2_ethernet2
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.2/31
