--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine1.yml
@@ -199,7 +199,8 @@ ethernet_interfaces:
   peer_interface: Ethernet6
   peer_type: spine
   description: P2P_LINK_TO_ptp-tests-spine2_Ethernet6
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ptp:
@@ -216,7 +217,8 @@ ethernet_interfaces:
   peer_interface: Ethernet7
   peer_type: spine
   description: P2P_LINK_TO_ptp-tests-spine2_Ethernet7
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ptp:
@@ -233,7 +235,8 @@ ethernet_interfaces:
   peer_interface: Ethernet8
   peer_type: spine
   description: P2P_LINK_TO_ptp-tests-spine2_Ethernet8
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ptp:
@@ -250,7 +253,8 @@ ethernet_interfaces:
   peer_interface: Ethernet9
   peer_type: spine
   description: P2P_LINK_TO_ptp-tests-spine2_Ethernet9
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ptp:
