--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-spine1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-spine1.yml
@@ -226,7 +226,8 @@ ethernet_interfaces:
   peer_interface: Ethernet9
   peer_type: spine
   description: P2P_LINK_TO_sflow-tests-spine2_Ethernet9
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   sflow:
@@ -236,7 +237,8 @@ ethernet_interfaces:
   peer_interface: Ethernet10
   peer_type: spine
   description: P2P_LINK_TO_sflow-tests-spine2_Ethernet10
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   sflow:
@@ -246,7 +248,8 @@ ethernet_interfaces:
   peer_interface: Ethernet11
   peer_type: spine
   description: P2P_LINK_TO_sflow-tests-spine2_Ethernet11
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   sflow:
@@ -256,7 +259,8 @@ ethernet_interfaces:
   peer_interface: Ethernet12
   peer_type: spine
   description: P2P_LINK_TO_sflow-tests-spine2_Ethernet12
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   sflow:
@@ -266,7 +270,8 @@ ethernet_interfaces:
   peer_interface: Ethernet13
   peer_type: spine
   description: P2P_LINK_TO_sflow-tests-spine2_Ethernet13
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   sflow:
@@ -276,7 +281,8 @@ ethernet_interfaces:
   peer_interface: Ethernet14
   peer_type: spine
   description: P2P_LINK_TO_sflow-tests-spine2_Ethernet14
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   sflow:
