--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1A.yml
@@ -456,7 +456,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet9
   peer_type: l3_interface
@@ -464,7 +465,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet10
   peer_type: l3_interface
@@ -472,7 +474,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test-DC1-BL1A
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet11
   peer_type: l3_interface
@@ -480,7 +483,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: DC1-BL1A descriptions preferred over single description
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet12
   peer_type: l3_interface
@@ -490,7 +494,8 @@ ethernet_interfaces:
   description: test l3 interfaces acls
   access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet12
   access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet12
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet13.10
   peer_type: l3_interface
@@ -509,7 +514,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_WAN_Zone
   ospf_area: '0'
   ospf_network_point_to_point: true
@@ -523,7 +529,8 @@ ethernet_interfaces:
     hash_algorithm: sha512
     key: AQQvKeimxJu+uGQ/yYvv9w==
 - name: Ethernet13
-  type: routed
+  switchport:
+    enabled: false
   peer_type: l3_interface
   shutdown: false
 - name: Ethernet4000
