--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2B.yml
@@ -621,7 +621,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 10.0.0.5/30
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   vrf: Tenant_A_OSPF
   ospf_area: '0'
   ospf_network_point_to_point: true
@@ -632,7 +633,6 @@ ethernet_interfaces:
   port_profile: TENANT_B
   description: server01_MLAG_Eth3
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 10
     mode: active
@@ -643,7 +643,6 @@ ethernet_interfaces:
   port_profile: TENANT_A_MTU
   description: server01_MTU_PROFILE_MLAG_Eth5
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 11
     mode: active
@@ -653,7 +652,6 @@ ethernet_interfaces:
   peer_type: server
   description: server01_MTU_ADAPTOR_MLAG_Eth7
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 12
     mode: active
@@ -664,7 +662,6 @@ ethernet_interfaces:
   port_profile: TENANT_A_B
   description: FIREWALL01_E1
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 20
     mode: active
@@ -675,9 +672,10 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: ROUTER01_Eth1
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '110'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '110'
 - name: Ethernet26
   peer: PHONE03_port_channel
   peer_interface: Eth1
@@ -685,7 +683,6 @@ ethernet_interfaces:
   port_profile: PHONE_WITH_PC
   description: PHONE03_port_channel_Eth1
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 26
     mode: active
