--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-SVC3B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-SVC3B.yml
@@ -1141,11 +1141,13 @@ ethernet_interfaces:
   port_profile: ALL_WITH_SECURITY
   description: server04_inherit_all_from_profile_Eth2
   shutdown: false
-  type: switched
   l2_mtu: 8000
   l2_mru: 9000
-  mode: trunk
-  vlans: 1-4094
+  switchport:
+    enabled: true
+    mode: trunk
+    trunk:
+      allowed_vlan: 1-4094
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: disabled
   spanning_tree_bpduguard: disabled
@@ -1168,9 +1170,11 @@ ethernet_interfaces:
   peer_type: server
   description: server05_no_profile_Eth2
   shutdown: false
-  type: switched
-  mode: trunk
-  vlans: 1-4094
+  switchport:
+    enabled: true
+    mode: trunk
+    trunk:
+      allowed_vlan: 1-4094
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: 'True'
   spanning_tree_bpduguard: disabled
@@ -1194,11 +1198,12 @@ ethernet_interfaces:
   port_profile: ALL_WITH_SECURITY
   description: server06_override_profile_Eth2
   shutdown: false
-  type: switched
   l2_mtu: 8000
   l2_mru: 9000
-  mode: access
-  vlans: '210'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '210'
   spanning_tree_portfast: network
   spanning_tree_bpdufilter: disabled
   spanning_tree_bpduguard: 'True'
@@ -1222,7 +1227,6 @@ ethernet_interfaces:
   port_profile: ALL_WITH_SECURITY_PORT_CHANNEL
   description: server07_inherit_all_from_profile_port_channel_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 14
     mode: active
@@ -1232,7 +1236,6 @@ ethernet_interfaces:
   peer_type: server
   description: server08_no_profile_port_channel_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 15
     mode: 'on'
@@ -1243,11 +1246,12 @@ ethernet_interfaces:
   port_profile: ALL_WITH_SECURITY_PORT_CHANNEL
   description: server09_override_profile_no_port_channel_Eth2
   shutdown: false
-  type: switched
   l2_mtu: 8000
   l2_mru: 9000
-  mode: access
-  vlans: '210'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '210'
   spanning_tree_portfast: network
   spanning_tree_bpdufilter: disabled
   spanning_tree_bpduguard: 'True'
@@ -1270,7 +1274,6 @@ ethernet_interfaces:
   peer_type: server
   description: server10_no_profile_port_channel_lacp_fallback_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 17
     mode: passive
@@ -1282,7 +1285,6 @@ ethernet_interfaces:
   port_profile: ALL_WITH_SECURITY_PORT_CHANNEL_LACP_FALLBACK
   description: server11_inherit_profile_port_channel_lacp_fallback_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 18
     mode: active
@@ -1294,7 +1296,6 @@ ethernet_interfaces:
   port_profile: NESTED_PORT_PROFILE
   description: server12_inherit_nested_profile_port_channel_lacp_fallback_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 19
     mode: active
@@ -1306,9 +1307,10 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server13_disabled_interfaces_Eth2
   shutdown: true
-  type: switched
-  mode: access
-  vlans: '110'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '110'
 - name: Ethernet21
   peer: server14_explicitly_enabled_interfaces
   peer_interface: Eth2
@@ -1316,9 +1318,10 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server14_explicitly_enabled_interfaces_Eth2
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '110'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '110'
 - name: Ethernet22
   peer: server15_port_channel_with_disabled_phy_interfaces
   peer_interface: Eth2
@@ -1326,7 +1329,6 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server15_port_channel_with_disabled_phy_interfaces_Eth2
   shutdown: true
-  type: port-channel-member
   channel_group:
     id: 22
     mode: active
@@ -1337,7 +1339,6 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server16_port_channel_with_disabled_port_channel_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 23
     mode: active
@@ -1348,7 +1349,6 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server17_port_channel_with_disabled_phy_and_po_interfaces_Eth2
   shutdown: true
-  type: port-channel-member
   channel_group:
     id: 24
     mode: active
@@ -1359,9 +1359,10 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server18_monitoring_session_source_phys_interfaces_Eth2
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '110'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '110'
 - name: Ethernet27
   peer: server18_monitoring_session_source_po
   peer_interface: Eth4
@@ -1369,7 +1370,6 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server18_monitoring_session_source_po_Eth4
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 27
     mode: active
@@ -1379,7 +1379,8 @@ ethernet_interfaces:
   peer_type: server
   description: server19_monitoring_session_destination_phys_Eth2
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet42
   peer: server21_monitoring_session_destination_po
   peer_interface: Eth2
@@ -1387,7 +1388,6 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server21_monitoring_session_destination_po_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 42
     mode: active
@@ -1398,7 +1398,6 @@ ethernet_interfaces:
   port_profile: TENANT_A
   description: server22_port_channel_with_custom_id_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 1291
     mode: active
@@ -1409,7 +1408,6 @@ ethernet_interfaces:
   port_profile: PORT_CHANNEL_LACP_TIMER
   description: server24_port_channel_lacp_timer_profile_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 31
     mode: active
@@ -1422,7 +1420,6 @@ ethernet_interfaces:
   peer_type: server
   description: server25_port_channel_lacp_timer_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 32
     mode: active
@@ -1436,7 +1433,6 @@ ethernet_interfaces:
   port_profile: PORT_CHANNEL_LACP_TIMER_NORMAL
   description: server26_port_channel_lacp_timer_profile_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 33
     mode: active
@@ -1449,7 +1445,6 @@ ethernet_interfaces:
   peer_type: server
   description: server27_port_channel_lacp_timer_Eth2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 34
     mode: active
