--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/MH-LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/MH-LEAF2A.yml
@@ -223,9 +223,10 @@ ethernet_interfaces:
   port_profile: Tenant_X_LT
   description: ROUTER01_Eth1
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '310'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '310'
   link_tracking_groups:
   - name: Eth-conn-to-router
     direction: downstream
