--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_bgp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/l3_edge_bgp.yml
@@ -94,7 +94,8 @@ ethernet_interfaces:
   peer_interface: ethernet1
   peer_type: other
   description: P2P_LINK_TO_peer1_ethernet1
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 2000
   service_profile: TEST-QOS-PROFILE
@@ -115,7 +116,8 @@ ethernet_interfaces:
   peer_interface: ethernet2
   peer_type: other
   description: P2P_LINK_TO_peer2_ethernet2
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.2/31
@@ -125,7 +127,8 @@ ethernet_interfaces:
   peer_interface: ethernet3
   peer_type: other
   description: P2P_LINK_TO_peer3_ethernet3
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.4/31
@@ -134,12 +137,12 @@ ethernet_interfaces:
   peer_interface: ethernet4
   peer_type: other
   description: Custom description on l3_edge_bgp eth4
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.6/31
 - name: Ethernet5
-  type: port-channel-member
   peer: peer5
   peer_interface: Ethernet5
   peer_type: other
@@ -149,7 +152,6 @@ ethernet_interfaces:
     id: 5
     mode: active
 - name: Ethernet6
-  type: port-channel-member
   peer: peer5
   peer_interface: Ethernet6
   peer_type: other
@@ -159,7 +161,6 @@ ethernet_interfaces:
     id: 5
     mode: active
 - name: Ethernet7
-  type: port-channel-member
   peer: peer6
   peer_interface: Ethernet7
   peer_type: other
@@ -169,7 +170,6 @@ ethernet_interfaces:
     id: 7
     mode: active
 - name: Ethernet8
-  type: port-channel-member
   peer: peer6
   peer_interface: Ethernet8
   peer_type: other
@@ -184,7 +184,8 @@ port_channel_interfaces:
   peer_interface: Port-Channel5
   peer_type: other
   description: P2P_LINK_TO_peer5_Port-Channel5
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.8/31
@@ -193,7 +194,8 @@ port_channel_interfaces:
   peer_interface: Port-Channel7
   peer_type: other
   description: P2P_LINK_TO_peer6_Port-Channel7
-  type: routed
+  switchport:
+    enabled: false
   shutdown: false
   mtu: 9214
   ip_address: 192.168.0.10/31
