--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/network-ports-tests.1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/network-ports-tests.1.yml
@@ -72,9 +72,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2
@@ -83,9 +84,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet3
@@ -94,9 +96,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet4
@@ -105,9 +108,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/1
@@ -116,9 +120,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/2
@@ -127,9 +132,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/3
@@ -138,9 +144,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/4
@@ -149,9 +156,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/5
@@ -160,9 +168,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/6
@@ -171,9 +180,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/7
@@ -182,9 +192,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/8
@@ -193,9 +204,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/9
@@ -204,9 +216,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/10
@@ -215,9 +228,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/11
@@ -226,9 +240,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/12
@@ -237,9 +252,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/13
@@ -248,9 +264,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/14
@@ -259,9 +276,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/15
@@ -270,9 +288,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/16
@@ -281,9 +300,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/17
@@ -292,9 +312,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/18
@@ -303,9 +324,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/19
@@ -314,9 +336,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/20
@@ -325,9 +348,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/21
@@ -336,9 +360,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/22
@@ -347,9 +372,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/23
@@ -358,9 +384,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/24
@@ -369,9 +396,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/25
@@ -380,9 +408,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/26
@@ -391,9 +420,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/27
@@ -402,9 +432,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/28
@@ -413,9 +444,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/29
@@ -424,9 +456,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/30
@@ -435,9 +468,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/31
@@ -446,9 +480,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/32
@@ -457,9 +492,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/33
@@ -468,9 +504,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/34
@@ -479,9 +516,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/35
@@ -490,9 +528,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/36
@@ -501,9 +540,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/37
@@ -512,9 +552,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/38
@@ -523,9 +564,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/39
@@ -534,9 +576,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/40
@@ -545,9 +588,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/41
@@ -556,9 +600,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/42
@@ -567,9 +612,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/43
@@ -578,9 +624,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/44
@@ -589,9 +636,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/45
@@ -600,9 +648,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/46
@@ -611,9 +660,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/47
@@ -622,9 +672,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet2/48
@@ -633,9 +684,10 @@ ethernet_interfaces:
   port_profile: pc
   description: PCs
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '100'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '100'
   spanning_tree_portfast: edge
   spanning_tree_bpdufilter: enabled
 - name: Ethernet5
@@ -643,54 +695,64 @@ ethernet_interfaces:
   peer_type: network_port
   description: 'N: blah'
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet6
   peer: 'N: blah'
   peer_type: network_port
   description: 'N: blah'
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet11
   peer: Base config which may be overwritten
   peer_type: network_port
   description: Base config which may be overwritten
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet12
   peer: Config overwriting base config
   peer_type: network_port
   description: Config overwriting base config
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet13
   peer: Base config which may be overwritten
   peer_type: network_port
   description: Base config which may be overwritten
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet14
   peer: CONNECTED_ENDPOINT_OVERWRITING_NETWORK_PORT
   peer_interface: Eth42
   peer_type: server
   description: CONNECTED_ENDPOINT_OVERWRITING_NETWORK_PORT_Eth42
   shutdown: false
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet51
   peer_type: network_port
   shutdown: true
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet52
   peer_type: network_port
   shutdown: true
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet53
   peer_type: network_port
   shutdown: true
-  type: switched
+  switchport:
+    enabled: true
 - name: Ethernet54
   peer_type: network_port
   shutdown: true
-  type: switched
+  switchport:
+    enabled: true
 mlag_configuration:
   domain_id: mlag
   local_interface: Vlan4094
