--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf1.yml
@@ -357,9 +357,10 @@ ethernet_interfaces:
   port_profile: PTP-profile-BMCA
   description: bmca-endpoint_eth1
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '11'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '11'
   ptp:
     announce:
       interval: 0
@@ -375,9 +376,10 @@ ethernet_interfaces:
   peer_type: server
   description: video-endpoint_PCI1
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '11'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '11'
   spanning_tree_portfast: edge
   ptp:
     announce:
@@ -395,7 +397,6 @@ ethernet_interfaces:
   peer_type: server
   description: Endpoint-with-mpass_PCI1
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 6
     mode: active
@@ -405,9 +406,10 @@ ethernet_interfaces:
   peer_type: server
   description: Endpoint-with-specific-PTP-profile_eth3
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '11'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '11'
   ptp:
     announce:
       interval: -2
