--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf2.yml
@@ -367,9 +367,10 @@ ethernet_interfaces:
   peer_type: server
   description: video-endpoint_PCI2
   shutdown: false
-  type: switched
-  mode: access
-  vlans: '11'
+  switchport:
+    enabled: true
+    mode: access
+    access_vlan: '11'
   spanning_tree_portfast: edge
   ptp:
     announce:
@@ -387,7 +388,6 @@ ethernet_interfaces:
   peer_type: server
   description: Endpoint-with-mpass_PCI2
   shutdown: false
-  type: port-channel-member
   channel_group:
     id: 6
     mode: active
